--- a/conf/twitter.conf.sample
+++ b/conf/twitter.conf.sample
@@ -1,6 +1,6 @@
 {
-  => ,""
-  => ,""
-  => ,""
-  => ,""
+ "Consumer_key" => ,""
+ "Consumer_secret_Access_token" => ,""
+ "Access_token" => ,""
+ "Access_token_secret" => ,""
 }
